feat: production config - dynamic CORS, env vars for Render + Vercel deployment